--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "DB_OPTION=mongodb NODE_ENV=lo node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/maxidetorres/proyecto-final-ch#readme",
   "dependencies": {
+    "config": "^3.3.6",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.12",
     "uuid": "^8.3.2"
   }
 }
