se actualiza el readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DB_OPTION=firebase NODE_ENV=lo node ./src/index.js"
+    "start": "NODE_ENV=lo node ./src/index.js",
+    "start:firebase": "DB_OPTION=firebase NODE_ENV=lo node ./src/index.js",
+    "start:mongodb": "DB_OPTION=mongodb NODE_ENV=lo node ./src/index.js"
   },
   "repository": {
     "type": "git",
