--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "$(npm bin)/eslint . --fix",
     "start": "NODE_ENV=lo node ./src/index.js",
-    "start:firebase": "DB_OPTION=firebase NODE_ENV=lo node ./src/index.js",
-    "start:mongodb": "DB_OPTION=mongodb NODE_ENV=lo node ./src/index.js"
+    "start:firebase": "DB_OPTION=firebase NODE_ENV=lo nodemon ./src/index.js",
+    "start:mongodb": "DB_OPTION=mongodb NODE_ENV=lo nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,31 @@
   },
   "homepage": "https://github.com/maxidetorres/proyecto-final-ch#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cluster": "^0.7.7",
     "config": "^3.3.6",
+    "ejs": "^3.1.6",
+    "eslint": "^8.8.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-xo": "^0.40.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "firebase-admin": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.12",
-    "uuid": "^8.3.2"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "twilio": "^3.74.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.5.1"
   }
 }
